인터페이스 수정_2

--- a/Front/main.html
+++ b/Front/main.html
@@ -6,6 +6,7 @@
 </head>
 
 <body>
+  <div id="jb-container">
     <h1>이김아파트 투표</h1>
     
     <div class="dropdown">
@@ -15,8 +16,69 @@
           <a href="#">투표생성</a>
           <a href="#">로그아웃</a>
         </div>
-      </div>
-      <hr/>
+    </div>
+    <hr/>
+
+    <table class="type01">
+      <tr>
+      <th scope="row">번호</th>
+      <td>제목</td>
+      <td>투표</td>
+      </tr> 
+
+      <tr>
+        <th scope="row">1</th>
+        <td>105동 동대표 투표...<br>2020-03-23</td>
+        <td><button>투표하기</button></td>
+      </tr>
+
+      <tr>
+        <th scope="row">2</th>
+        <td>아파트 외벽 페인트 칠하...<br>2020-03-23</td>
+        <td><button>투표하기</button></td>
+      </tr> 
+
+      <tr>
+        <th scope="row">3</th>
+        <td>105동 동대표 투표...<br>2020-03-23</td>
+        <td><button>투표하기</button></td>
+      </tr> 
+
+      <tr>
+        <th scope="row">4</th>
+        <td>105동 동대표 투표...<br>2020-03-23</td>
+        <td><button>투표하기</button></td>
+      </tr> 
+
+      <tr>
+        <th scope="row">5</th>
+        <td>105동 동대표 투표...<br>2020-03-23</td>
+        <td><button>투표하기</button></td>
+      </tr> 
+
+      <tr>
+        <th scope="row">6</th>
+        <td>105동 동대표 투표...<br>2020-03-23</td>
+        <td><button>투표하기</button></td>
+      </tr> 
+
+      <tr>
+        <th scope="row">7</th>
+        <td>105동 동대표 투표...<br>2020-03-23</td>
+        <td><button>투표하기</button></td>
+      </tr> 
+
+      <tr>
+        <th scope="row">8</th>
+        <td>105동 동대표 투표...<br>2020-03-23</td>
+        <td><button>투표하기</button></td>
+      </tr> 
+
+      
+
+    </table>
+  </div>
+   
 </body>
 
 
