--- a/Front/main.html
+++ b/Front/main.html
@@ -34,37 +34,37 @@
 
       <tr>
         <th scope="row">2</th>
-        <td>아파트 외벽 페인트 칠하...<br>2020-03-23</td>
+        <td>아파트 외벽 페인트 칠하...<br>2019-12-28</td>
         <td><button>투표하기</button></td>
       </tr> 
 
       <tr>
         <th scope="row">3</th>
-        <td>105동 동대표 투표...<br>2020-03-23</td>
+        <td>음식물 쓰레기 처리 비용...<br>2019-12-10</td>
         <td><button>투표하기</button></td>
       </tr> 
 
       <tr>
         <th scope="row">4</th>
-        <td>105동 동대표 투표...<br>2020-03-23</td>
+        <td>분리수거 날짜 변경을 하...<br>2020-03-23</td>
         <td><button>투표하기</button></td>
       </tr> 
 
       <tr>
         <th scope="row">5</th>
-        <td>105동 동대표 투표...<br>2020-03-23</td>
+        <td>107동 동대표 투표...<br>2020-03-23</td>
         <td><button>투표하기</button></td>
       </tr> 
 
       <tr>
         <th scope="row">6</th>
-        <td>105동 동대표 투표...<br>2020-03-23</td>
+        <td>택배 보관함 설치에...<br>2020-03-23</td>
         <td><button>투표하기</button></td>
       </tr> 
 
       <tr>
         <th scope="row">7</th>
-        <td>105동 동대표 투표...<br>2020-03-23</td>
+        <td>102동 동대표 투표...<br>2020-03-23</td>
         <td><button>투표하기</button></td>
       </tr> 
 
