--- a/Front/main.html
+++ b/Front/main.html
@@ -12,9 +12,10 @@
     <div class="dropdown">
         <button>메뉴</button>
         <div class="dropdown-content">
-          <a href="#">계정</a>
-          <a href="#">투표생성</a>
+          <a href="./test.html" target="_blank">계정</a>
+          <a href="./main.html" target="_blank">투표생성</a>
           <a href="#">로그아웃</a>
+          <a href="./dog.jpg">dog</a>
         </div>
     </div>
     <hr/>
@@ -78,7 +79,6 @@
 
     </table>
   </div>
-   
 </body>
 
 
